Migrate project to Hono
Cleanup:
- Deleted all source code files including components, pages, and layouts
- Removed all styles and configuration files (e.g., global CSS, astro.config.mjs)
- Deleted Docker-related files (Dockerfile, docker-compose.yml)
- Eliminated dependency management files and lockfiles (e.g., pnpm-lock.yaml)
- Removed development artifacts (e.g., .env files, .dockerignore)

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-# Turso Database Configuration
-# For production use with Turso cloud database
+# Turso Database (optional - falls back to local.db if not set)
 TURSO_DB_URL=libsql://your-database.turso.io
-TURSO_AUTH_TOKEN=your-auth-token-here
+TURSO_AUTH_TOKEN=your-auth-token
 
-# Note: If credentials are not set, scripts with :local suffix will use file:local.db instead
+# Embedding Provider for Search (required for Workers)
+# Options: gemini, openai (local not supported in Workers)
+EMBEDDING_PROVIDER=gemini
 
-# Embedding Provider (local, gemini, or openai)
-EMBEDDING_PROVIDER=local
+# Gemini API Key (if using gemini provider)
+GEMINI_API_KEY=your-gemini-api-key
 
-# Optional: API Keys for cloud embedding providers
-# GEMINI_API_KEY=your-gemini-api-key
+# OpenAI API Key (if using openai provider)
 # OPENAI_API_KEY=your-openai-api-key
