Update deployment configuration for Cloudflare Workers
Features:
- Adjusted the `pnpm deploy` script to target Cloudflare Workers instead of Pages.
- Updated README with revised deployment instructions for Workers, including environment variable setup using Wrangler CLI and Cloudflare Dashboard.
- Specified build command and environment variable instructions in `wrangler.toml`.

Refactoring:
- Simplified wrangler-specific scripts (`preview` and `deploy`) in `package.json`.

Cleanup:
- Removed outdated references to "local" embedding provider under Workers setup.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,16 +1,15 @@
 #:schema node_modules/wrangler/config-schema.json
 name = "semantic-docs-hono"
 compatibility_date = "2025-01-03"
+main = "dist/index.js"
 
-# Environment variables
+# Build configuration
+[build]
+command = "pnpm build"
+
+# Environment variables (set via dashboard or `wrangler secret put`)
 [vars]
-# TURSO_DB_URL and TURSO_AUTH_TOKEN should be set via `wrangler secret put` or dashboard
-# EMBEDDING_PROVIDER can be "local", "gemini", or "openai" (default: local)
-
-# For development
-[env.dev]
-# Local development settings
-
-# For production
-[env.production]
-# Production settings
+# Required:
+# - TURSO_DB_URL (set as secret)
+# - TURSO_AUTH_TOKEN (set as secret)
+# - EMBEDDING_PROVIDER = "gemini" or "openai" (local not supported in Workers)
