--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "wrangler pages dev",
-    "deploy": "wrangler pages deploy",
+    "preview": "wrangler dev",
+    "deploy": "wrangler deploy",
     "db:init": "tsx --env-file=.env scripts/init-db.ts",
     "db:init:local": "tsx scripts/init-db.ts",
     "index": "tsx --env-file=.env scripts/index-content.ts",
