--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "format": "biome format --write ."
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@hono/react-renderer": "^1.0.1",
     "@hono/vite-build": "^1.7.0",
     "@hono/vite-dev-server": "^0.16.0",
-    "@google/generative-ai": "^0.24.1",
     "@libsql/client": "^0.15.15",
     "@logan/libsql-search": "jsr:^0.1.3",
-    "@logan/logger": "jsr:^1.1.11",
+    "@logtape/logtape": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@tailwindcss/vite": "^4.1.14",
     "clsx": "^2.1.1",
@@ -60,8 +60,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.14",
-    "winston": "^3.18.3"
+    "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.6",
