--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,18 @@
 #:schema node_modules/wrangler/config-schema.json
 name = "semantic-docs-hono"
 compatibility_date = "2025-01-03"
+compatibility_flags = ["nodejs_compat"]
 main = "dist/index.js"
 
 # Build configuration
 [build]
 command = "pnpm build"
+
+# Rules for special file types
+[[rules]]
+type = "CompiledWasm"
+globs = ["**/*.wasm"]
+fallthrough = true
 
 # Environment variables (set via dashboard or `wrangler secret put`)
 [vars]
