Refactor logging, adjust configs, and enhance dependency handling
Features:
- Added lazy initialization for logger configuration in `src/lib/logger.ts`.
- Introduced conditional dependency inclusion (`promise-limit`) in Vite's config for better dev mode optimization.
- Enhanced CSS parser settings in `biome.json` to support Tailwind directives.

Refactoring:
- Updated `jsxRenderer` for cleaner layout rendering in `_renderer.tsx`.
- Reordered middleware and imports for better readability in API routes.
- Streamlined configuration logic in multiple config files (`vite.config.ts`, `vitest.config.ts`).

Cleanup:
- Removed redundant server logging configuration in `server.ts`.
- Updated `biome.json` schema reference and added missing exclusions.
- Adjusted `wrangler.toml` project name for clarity.
- Replaced unnecessary type imports in `DocsToc.tsx`.

--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.6/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.3.3/schema.json",
   "vcs": {
     "enabled": true,
     "clientKind": "git",
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "includes": ["**", "!.claude"]
+    "includes": ["**", "!.claude", "!app/style.css"]
   },
   "formatter": {
     "enabled": true,
@@ -28,6 +28,12 @@
         "noAssignInExpressions": "off",
         "noUnknownAtRules": "off",
         "useIterableCallbackReturn": "off"
+      },
+      "security": {
+        "noDangerouslySetInnerHtml": "off"
+      },
+      "a11y": {
+        "noSvgWithoutTitle": "off"
       }
     }
   },
@@ -35,6 +41,13 @@
     "formatter": {
       "quoteStyle": "single",
       "semicolons": "always"
+    }
+  },
+  "css": {
+    "parser": {
+      "cssModules": false,
+      "allowWrongLineComments": false,
+      "tailwindDirectives": true
     }
   },
   "assist": {
