Update import paths and enhance API search route
Refactoring:
- Standardized import paths across the codebase to use aliases (`@` and `~`) for consistency and improved readability.
- Updated all instances of import paths in various modules and scripts.

Features:
- Enhanced API search route to handle `GET` requests with a proper method not allowed response.
- Added a fallback error response for unexpected request scenarios.

Configuration:
- Updated `wrangler.toml` with `keep_vars` for better deployment compatibility.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,7 @@ name = "hono"
 compatibility_date = "2025-01-03"
 compatibility_flags = ["nodejs_compat"]
 main = "dist/index.js"
+keep_vars = true
 
 # Build configuration
 [build]
