Remove legacy content indexing and database initialization scripts
Cleanup:
- Deleted `index-content.ts` and `init-db.ts` scripts used for content indexing and database schema initialization.
- Removed associated runtime functions and utilities from `libsql-search-runtime.ts`.

Refactoring:
- Consolidated search runtime into streamlined components for Cloudflare Workers deployment.
- Updated references to removed utilities and functions in related modules/scripts.

Configuration:
- Added a new workflow file (`deploy.yml`) for automated deployment to Cloudflare Workers.
- Introduced detailed Cloudflare setup documentation (`CLOUDFLARE_SETUP.md`) for deployment and configuration guidance.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,21 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "hono"
+name = "semantic-docs-hono"
 compatibility_date = "2025-01-03"
 compatibility_flags = ["nodejs_compat"]
 main = "dist/index.js"
 keep_vars = true
 
-# Build configuration
-[build]
-command = "pnpm build"
+# R2 Bucket for content storage
+[[r2_buckets]]
+binding = "CONTENT"
+bucket_name = "hono"
+
+# AI Search binding for semantic search
+[ai]
+binding = "AI"
 
 # Rules for special file types
 [[rules]]
 type = "CompiledWasm"
 globs = ["**/*.wasm"]
 fallthrough = true
-
-# Environment variables (set via dashboard or `wrangler secret put`)
-[vars]
-# Required:
-# - TURSO_DB_URL (set as secret)
-# - TURSO_AUTH_TOKEN (set as secret)
-# - EMBEDDING_PROVIDER = "gemini" or "openai" (local not supported in Workers)
