--- a/package.json
+++ b/package.json
@@ -29,10 +29,7 @@
     "build": "vite build",
     "preview": "wrangler dev",
     "deploy": "wrangler deploy",
-    "db:init": "tsx --env-file=.env scripts/init-db.ts",
-    "db:init:local": "tsx scripts/init-db.ts",
-    "index": "tsx --env-file=.env scripts/index-content.ts",
-    "index:local": "tsx scripts/index-content.ts",
+    "generate:manifest": "tsx scripts/generate-manifest.ts",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
@@ -41,12 +38,9 @@
     "format": "biome format --write ."
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
     "@hono/react-renderer": "^1.0.1",
     "@hono/vite-build": "^1.7.0",
     "@hono/vite-dev-server": "^0.16.0",
-    "@libsql/client": "^0.15.15",
-    "@logan/libsql-search": "jsr:^0.1.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@tailwindcss/vite": "^4.1.14",
     "clsx": "^2.1.1",
@@ -55,7 +49,6 @@
     "honox": "^0.1.32",
     "lucide-react": "^0.546.0",
     "marked": "^16.4.0",
-    "openai": "^6.7.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.3.1",
