Update environment variable handling and deployment configuration
Cleanup:
- Deleted `.env.example` file due to migration to Cloudflare Worker Variables.
- Removed `R2_BUCKET_NAME` from deployment workflow environment definitions.

Refactoring:
- Replaced `env.R2_BUCKET_NAME` with `vars.R2_BUCKET_NAME` for improved compatibility in workflows.
- Updated `wrangler.toml` name to `hono` for clarity.
- Adjusted AI search index usage to fetch dynamically from environment variables.

Documentation:
- Enhanced Cloudflare setup instructions in `CLOUDFLARE_SETUP.md`.
- Added detailed steps to configure repository secrets, variables, and Worker environment variables.
- Revised deployment guide to emphasize the importance of setting `AI_SEARCH_INDEX`.

Features:
- Introduced support for `AI_SEARCH_INDEX` as a required environment variable for AI search functionality.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "semantic-docs-hono"
+name = "hono"
 compatibility_date = "2025-01-03"
 compatibility_flags = ["nodejs_compat"]
 main = "dist/index.js"
@@ -13,6 +13,10 @@ bucket_name = "hono"
 # AI Search binding for semantic search
 [ai]
 binding = "AI"
+
+# Variables and secrets are set via Cloudflare Dashboard:
+# Workers & Pages → Your worker → Settings → Variables and Secrets
+# Required: AI_SEARCH_INDEX (your AI Search index name)
 
 # Rules for special file types
 [[rules]]
