--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,9 +6,6 @@ on:
       - main
   workflow_dispatch:
 
-env:
-  R2_BUCKET_NAME: ${{ secrets.R2_BUCKET_NAME || 'hono' }}
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -39,7 +36,7 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
         run: |
-          npx wrangler r2 object put ${{ env.R2_BUCKET_NAME }}/manifest.json \
+          npx wrangler r2 object put ${{ vars.R2_BUCKET_NAME }}/manifest.json \
             --file=manifest.json
 
       - name: Upload content to R2
@@ -52,7 +49,7 @@ jobs:
             # Get relative path from content directory
             relative_path="${file#./content/}"
             echo "Uploading: $relative_path"
-            npx wrangler r2 object put "${{ env.R2_BUCKET_NAME }}/$relative_path" --file="$file"
+            npx wrangler r2 object put "${{ vars.R2_BUCKET_NAME }}/$relative_path" --file="$file"
           done
 
       - name: Build worker
