--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Generate manifest
         run: pnpm exec tsx scripts/generate-manifest.ts
 
+      - name: Build client bundle
+        run: pnpm build:client
+
       - name: Upload manifest to R2
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
@@ -53,8 +56,18 @@ jobs:
             npx wrangler r2 object put "${{ vars.R2_BUCKET_NAME }}/$relative_path" --file="$file" --remote
           done
 
+      - name: Upload client bundle to R2
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+        run: |
+          npx wrangler r2 object put "${{ vars.R2_BUCKET_NAME }}/static/client.js" \
+            --file=dist/static/client.js \
+            --remote \
+            --content-type="application/javascript"
+
       - name: Build worker
-        run: pnpm build
+        run: pnpm build:server
 
       - name: Deploy to Cloudflare Workers
         env:
