--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "homepage": "https://github.com/llbbl/semantic-docs#readme",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "pnpm build:client && pnpm build:server",
+    "build:server": "vite build",
+    "build:client": "vite build --config vite.client.config.ts",
     "preview": "wrangler dev",
     "deploy": "wrangler deploy",
     "generate:manifest": "tsx scripts/generate-manifest.ts",
@@ -62,6 +64,7 @@
     "@types/node": "^20.19.21",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^5.1.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "happy-dom": "^20.0.1",
