--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
             npx wrangler r2 object put "${{ vars.R2_BUCKET_NAME }}/$relative_path" --file="$file" --remote
           done
 
-      - name: Upload client bundle to R2
+      - name: Upload static assets to R2
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
@@ -65,6 +65,11 @@ jobs:
             --file=dist/static/client.js \
             --remote \
             --content-type="application/javascript"
+
+          npx wrangler r2 object put "${{ vars.R2_BUCKET_NAME }}/favicon.svg" \
+            --file=public/favicon.svg \
+            --remote \
+            --content-type="image/svg+xml"
 
       - name: Build worker
         run: pnpm build:server
