Add hashed client bundle generation and update references
Features:
- Added a script (`generate-client-manifest.ts`) to generate a manifest with the hashed client bundle filename.
- Updated deployment workflow to upload hashed client bundle to R2 dynamically.
- Integrated dynamic client bundle filename usage in server routes and HTML templates.

Refactoring:
- Replaced hardcoded `/app/client.js` references with dynamic imports based on the generated manifest.
- Updated Vite client configuration to use hashed filenames for client bundles.

Cleanup:
- Updated repository URLs in `package.json` to reflect the new project name.
- Removed redundant logic for handling static client filenames in deployment and server-side routes.

--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/llbbl/semantic-docs.git"
+    "url": "https://github.com/llbbl/semantic-docs-hono.git"
   },
   "bugs": {
-    "url": "https://github.com/llbbl/semantic-docs/issues"
+    "url": "https://github.com/llbbl/semantic-docs-hono/issues"
   },
-  "homepage": "https://github.com/llbbl/semantic-docs#readme",
+  "homepage": "https://github.com/llbbl/semantic-docs-hono#readme",
   "scripts": {
     "dev": "vite",
-    "build": "pnpm build:client && pnpm build:server",
+    "build": "pnpm build:client && pnpm generate:client-manifest && pnpm build:server",
     "build:server": "vite build",
     "build:client": "vite build --config vite.client.config.ts",
+    "generate:client-manifest": "tsx scripts/generate-client-manifest.ts",
     "preview": "wrangler dev",
     "deploy": "wrangler deploy",
     "generate:manifest": "tsx scripts/generate-manifest.ts",
