--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,8 +61,12 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
         run: |
-          npx wrangler r2 object put "${{ vars.R2_BUCKET_NAME }}/static/client.js" \
-            --file=dist/static/client.js \
+          # Find and upload the hashed client.*.js file
+          CLIENT_FILE=$(ls dist/static/client.*.js | head -1)
+          CLIENT_BASENAME=$(basename "$CLIENT_FILE")
+          echo "Uploading client bundle: $CLIENT_BASENAME"
+          npx wrangler r2 object put "${{ vars.R2_BUCKET_NAME }}/static/$CLIENT_BASENAME" \
+            --file="$CLIENT_FILE" \
             --remote \
             --content-type="application/javascript"
 
