--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Build client bundle
         run: pnpm build:client
 
+      - name: Generate client manifest
+        run: pnpm generate:client-manifest
+
       - name: Upload manifest to R2
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
