Remove redundant TypeScript error comments and add client manifest generation step
Cleanup:
- Removed unnecessary `@ts-expect-error` comments from `Search.tsx` for React 19 compatibility.

Features:
- Added client manifest generation step to CI workflow to create a placeholder manifest file automatically.

Refactoring:
- Introduced `@jsxImportSource react` directive in `client.tsx` for better JSX compatibility.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,12 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Create placeholder client manifest
+        run: |
+          mkdir -p app
+          echo "// Auto-generated - do not edit" > app/client-manifest.ts
+          echo "export const clientFilename = 'client.placeholder.js';" >> app/client-manifest.ts
+
       - name: Run tests
         run: pnpm test --run
 
@@ -54,6 +60,12 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
+
+      - name: Create placeholder client manifest
+        run: |
+          mkdir -p app
+          echo "// Auto-generated - do not edit" > app/client-manifest.ts
+          echo "export const clientFilename = 'client.placeholder.js';" >> app/client-manifest.ts
 
       - name: Check TypeScript
         run: pnpm exec tsc --noEmit
