Add robust R2 bucket structure and improve Worker integration
Features:
- Introduced separate R2 buckets for markdown (`CONTENT`) and static assets (`STATIC`) for better organization and AI Search performance.
- Updated AI Search configuration to focus only on markdown bucket, simplifying indexing and avoiding unnecessary asset scans.
- Enhanced API error handling for missing `AI_SEARCH_INDEX` environment variable.
- Introduced detailed `DEVELOPMENT.md` guide with workflows for remote and build-deploy options.
- Added support for dynamically resolved static assets within server routes.

Refactoring:
- Updated workflows to distinguish between content and static asset uploads to respective R2 buckets in deployment.
- Simplified HTML rendering using standardized `<!DOCTYPE html>` structures and removed unnecessary fragments.
- Adjusted server routes to fetch manifest and client files from differentiated R2 buckets (`STATIC`).

Cleanup:
- Removed redundant comments, unused logic, and improved readability across server-rendered templates.
- Streamlined development server behaviors by disabling unsupported local `vite dev` workflow.

--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   },
   "homepage": "https://github.com/llbbl/semantic-docs-hono#readme",
   "scripts": {
-    "dev": "vite",
+    "dev": "echo '⚠️  Local dev requires Cloudflare setup. Run: pnpm dev:remote' && exit 1",
+    "dev:remote": "wrangler dev --remote",
     "build": "pnpm build:client && pnpm generate:client-manifest && pnpm build:server",
     "build:server": "vite build",
     "build:client": "vite build --config vite.client.config.ts",
     "generate:client-manifest": "tsx scripts/generate-client-manifest.ts",
-    "preview": "wrangler dev",
+    "preview": "wrangler dev --remote",
     "deploy": "wrangler deploy",
     "generate:manifest": "tsx scripts/generate-manifest.ts",
     "test": "vitest",
