--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,43 +37,42 @@ jobs:
       - name: Generate client manifest
         run: pnpm generate:client-manifest
 
-      - name: Upload manifest to R2
+      - name: Upload markdown content to CONTENT bucket
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
         run: |
-          npx wrangler r2 object put ${{ vars.R2_BUCKET_NAME }}/manifest.json \
-            --file=manifest.json \
-            --remote
-
-      - name: Upload content to R2
-        env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        run: |
-          # Upload all markdown files preserving directory structure
+          # Upload all markdown files preserving directory structure to hono-content
           find ./content -type f -name "*.md" | while read -r file; do
             # Get relative path from content directory
             relative_path="${file#./content/}"
-            echo "Uploading: $relative_path"
-            npx wrangler r2 object put "${{ vars.R2_BUCKET_NAME }}/$relative_path" --file="$file" --remote
+            echo "Uploading to CONTENT: $relative_path"
+            npx wrangler r2 object put "${{ vars.R2_CONTENT_BUCKET }}/$relative_path" --file="$file" --remote
           done
 
-      - name: Upload static assets to R2
+      - name: Upload static assets to STATIC bucket
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
         run: |
+          # Upload manifest.json
+          echo "Uploading manifest.json to STATIC bucket"
+          npx wrangler r2 object put "${{ vars.R2_STATIC_BUCKET }}/manifest.json" \
+            --file=manifest.json \
+            --remote
+
           # Find and upload the hashed client.*.js file
           CLIENT_FILE=$(ls dist/static/client.*.js | head -1)
           CLIENT_BASENAME=$(basename "$CLIENT_FILE")
           echo "Uploading client bundle: $CLIENT_BASENAME"
-          npx wrangler r2 object put "${{ vars.R2_BUCKET_NAME }}/static/$CLIENT_BASENAME" \
+          npx wrangler r2 object put "${{ vars.R2_STATIC_BUCKET }}/$CLIENT_BASENAME" \
             --file="$CLIENT_FILE" \
             --remote \
             --content-type="application/javascript"
 
-          npx wrangler r2 object put "${{ vars.R2_BUCKET_NAME }}/favicon.svg" \
+          # Upload favicon
+          echo "Uploading favicon.svg to STATIC bucket"
+          npx wrangler r2 object put "${{ vars.R2_STATIC_BUCKET }}/favicon.svg" \
             --file=public/favicon.svg \
             --remote \
             --content-type="image/svg+xml"
