Remove outdated `.map` file documentation and update R2 CLI usage
Cleanup:
- Removed the `LOGGER_FIX.md` documentation, which was obsolete and no longer relevant.
- Deleted detailed steps for handling `.map` files in the client-side logger, as they were phased out.

Refactoring:
- Updated R2 CLI commands to use `npx wrangler` instead of `wrangler` directly.
- Enhanced clarity by appending the `--remote` flag to R2 examples for remote operations.

Features:
- Added a detailed workflow guide for manual file deletion in R2, including handling discrepancies between R2 and repository state.
- Documented scripted bulk deletion and strategies for renaming/moving files in R2.

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ node_modules/
 # Build outputs
 dist/
 .astro/
-app/client-manifest.ts
 
 # Environment variables
 .env
@@ -44,4 +43,8 @@ local.db-wal
 *.db
 *.db-shm
 *.db-wal
+
+# cloudflare app files
 /manifest.json
+/.wrangler/
+app/client-manifest.ts
